--- a/main.tex
+++ b/main.tex
@@ -5,9 +5,13 @@
 \addbibresource{bibliography.bib}
 
 \begin{document}
-\title{5G: The Next Step in Mobile Communications}
-\author{Rebecca Kane}
 
+\markboth{5G: The Next Step in Mobile Communications, November~2017}%
+{5G: The Next Step in Mobile Communications, November~2017}
+
+\title{5G: The Next Step in Mobile Communications}
+\author{Rebecca Kane,~\IEEEmembership{Software Development (Honours),~GMIT}%
+}
 % Author: Rebecca Kane
 % Student of Galway-Mayo Institute of Technology, Department of Computer Science and Applied Physics
 % Literature Review on 5G Mobile Communications completed as part of Research Methods in Computing and IT.
