--- a/main.tex
+++ b/main.tex
@@ -49,11 +49,17 @@ While our present problems of signal loss or slow speeds at peak times may not b
 \subsection{The Definition of 5G} \label{subsec:def5g}
 Presently there is no fixed definition for 5G, and the standards for 5G are continuously being reviewed. However, the Institute of Electrical and Electronics Engineers \textit{(IEEE)} have defined three core features of 5G \cite{ieee5g}, outlined below. 
 
-\textbf{1) Massive Connectivity}. The \textit{Internet of Things} era is defined as the point in time where the number of physical devices connected to the internet overtook the number of people connected. The ever-growing expanse of the Internet of Things suggests that 5G networks will have to be capable of handling enormous numbers of non-traditional devices, such as fridges, televisions, kettles, home heating, and lighting, for example.
+%\textbf{1) Massive Connectivity}.
+\subsubsection{Massive Connectivity}
+The \textit{Internet of Things} era is defined as the point in time where the number of physical devices connected to the internet overtook the number of people connected. The ever-growing expanse of the Internet of Things suggests that 5G networks will have to be capable of handling enormous numbers of non-traditional devices, such as fridges, televisions, kettles, home heating, and lighting, for example.
 
-\textbf{2) Capacity Enhancement}. As mentioned in \textit{\ref{subsec:4g}}, our current 4G networks are struggling under increasing numbers of devices. While no prediction is certain, in June 2017 Ericsson predicted the number of connected devices to rise from 18 billion in 2017, to 29 billion in 2022 \cite{ericssondev}. Regardless of how accurate this prediction may come to be, one simply has to look at the increase from approximately 13 billion devices recorded in 2014 \cite{ericssondev} to today, to understand how critical it is that we allow for future growth at the same rate, if not higher. Increase in capacity must therefore be core to any future generation of mobile communications.
+%\textbf{2) Capacity Enhancement}.
+\subsubsection{Capacity Enhancement}
+As mentioned in \textit{\ref{subsec:4g}}, our current 4G networks are struggling under increasing numbers of devices. While no prediction is certain, in June 2017 Ericsson predicted the number of connected devices to rise from 18 billion in 2017, to 29 billion in 2022 \cite{ericssondev}. Regardless of how accurate this prediction may come to be, one simply has to look at the increase from approximately 13 billion devices recorded in 2014 \cite{ericssondev} to today, to understand how critical it is that we allow for future growth at the same rate, if not higher. Increase in capacity must therefore be core to any future generation of mobile communications.
 
-\textbf{3) Ultra High Reliability and Low Latency}. Demands and expectations placed on our networks today differ greatly in comparison to those at the beginning of mobile communications, and even at the introduction of 3G and 4G networks. We find ourselves irked at the sight of no signal on our devices. It is this aversion to down-time that makes ultra high reliability a focus point for improvement. \textit{Latency} is defined as the amount of time it takes for data to travel from one point on a network to another, with emphasis placed on speed over integrity of data. For example, low latency is ideal for voice calls or online gaming, where near instant data transfer is highly desired, if not necessary.
+%\textbf{3) Ultra High Reliability and Low Latency}.
+\subsubsection{Ultra High Reliability and Low Latency}
+Demands and expectations placed on our networks today differ greatly in comparison to those at the beginning of mobile communications, and even at the introduction of 3G and 4G networks. We find ourselves irked at the sight of no signal on our devices. It is this aversion to down-time that makes ultra high reliability a focus point for improvement. \textit{Latency} is defined as the amount of time it takes for data to travel from one point on a network to another, with emphasis placed on speed over integrity of data. For example, low latency is ideal for voice calls or online gaming, where near instant data transfer is highly desired, if not necessary.
 
 \section{Proposed Technologies}
 
